# risk-platform

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.dashboard  INTERVIEW_PREP.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/market/: prices.parquet  prices_extended.parquet
data/sample/: loan_portfolio.csv  market_portfolio.csv
docs/: DEMO_WALKTHROUGH.md
figures/: pd_summary_table.csv
models/: metrics.json
scripts/: build_methodology_pdf.py  compare_pd_models.py  generate_sample_portfolio.py  run_portfolio_credit_risk.py  run_portfolio_el.py  train_lgd_model.py  train_pd_scorecard.py  train_pd_xgboost.py
src/risk_platform/: __init__.py
src/risk_platform/api/: main.py  schemas.py
src/risk_platform/api/routers/: credit.py  market.py  portfolio.py  report.py
src/risk_platform/credit/: __init__.py  evaluation.py  expected_loss.py  lgd_model.py  pd_models.py  pd_scorecard.py  pd_xgboost.py
src/risk_platform/dashboard/: Home.py  _portfolio_widget.py
src/risk_platform/dashboard/pages/: 1_Market_Risk.py  2_Credit_Risk.py  3_Portfolio_Credit.py  4_Stress_Testing.py  5_Model_Cards.py  (+1 more)
src/risk_platform/data/: __init__.py  lending_club.py
src/risk_platform/market/: __init__.py  backtesting.py  cache.py  data.py  decomposition.py  evt.py  market_risk.py  stress.py  var_methods.py
src/risk_platform/portfolio/: __init__.py  copula.py  vasicek.py
tests/: test_api.py  test_credit.py  test_expected_loss.py  test_market.py  test_market_cache.py  test_portfolio.py  test_portfolio_credit.py
