[project]
name = "risk-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "fastapi>=0.136.3",
    "matplotlib>=3.8",
    "numpy>=2.4.6",
    "pyarrow>=14.0",
    "optbinning>=0.21.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "requests>=2.32",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.27",
    "kaggle>=2.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
